CGIV-8270 Added text align right to the stock quantity to align the numbers correctly

--- a/public/channelgrabber/products/scss/_products.scss
+++ b/public/channelgrabber/products/scss/_products.scss
@@ -585,5 +585,6 @@ div.tether-element div.hover-link {
     }
     .stock {
         width: 20px;
+        text-align: right;
     }
 }
